src/test/resources/wacc_examples/invalid/syntaxErr/imports/invalidExtension.wacc
begin
    include "test1.wac"
    skip
end